Fix typo in requirements.txt: change 'request' to 'requests'

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-Dependencies required for the AI-Powered Learning Path Analyzer
-
 streamlit
 matplotlib
 numpy
 scikit-learn
 PyPDF2
 nltk
-request
+requests
